--- a/Fuente/styles/sass/layout/_header.scss
+++ b/Fuente/styles/sass/layout/_header.scss
@@ -1,19 +1,20 @@
-// Importo las Variables 
-@use '../utils/variables';
+// Importo las Variables y las funciones de math
+@use 'sass:math';
+@import '../utils/variables';
 
 // Diseño del Header
 @function px-to-rem($px) {
-    @return $px / 16px * 1rem;
+    @return math.div($px, 16px) * 1rem;
 }
 
 header {
-    background-color: variables.$color-Principal;
+    background-color: $color-Principal;
     position: fixed;
     width: 100%;
     top: 0;
     min-height: px-to-rem(160px);
     z-index: 5;
-    box-shadow: 0 px-to-rem(10px) px-to-rem(5px) 0 variables.$color-Neutro-Negro-rgba;
+    box-shadow: 0 px-to-rem(10px) px-to-rem(5px) 0 $color-Neutro-Negro-rgba;
     z-index: 10;
 }
 
@@ -45,14 +46,14 @@ header {
     display: none;
     background: none;
     border: none;
-    color: variables.$color-Neutro-Blanco;
+    color: $color-Neutro-Blanco;
     font-size: px-to-rem(80px);
     cursor: pointer;
     transition: all 0.5s;
 
     &:hover {
         transform: scale(1,0.75);
-        color: variables.$color-Terciario;
+        color: $color-Terciario;
     }
 }
 
@@ -74,7 +75,7 @@ header {
             transform: translateX(-50%);
             width: 0;
             height: 0.20rem;       
-            background-color: variables.$color-Terciario; 
+            background-color: $color-Terciario; 
             transition: width 0.3s ease;
         }
 
