--- a/Fuente/styles/sass/layout/_section.scss
+++ b/Fuente/styles/sass/layout/_section.scss
@@ -1,9 +1,10 @@
-// Importo las Variables 
-@use '../utils/variables';
+// Importo las Variables y las funciones de math
+@use 'sass:math';
+@import '../utils/variables';
 
 // Estilo de la parte de la cabecera del main
 @function px-to-rem($px) {
-    @return $px / 16px * 1rem;
+    @return math.div($px, 16px) * 1rem;
 }
 
 .introduccion {
@@ -17,7 +18,7 @@
     flex-direction: column;
     align-items: center;
 
-    box-shadow: 0 px-to-rem(10px) px-to-rem(5px) 0 variables.$color-Neutro-Negro-rgba;
+    box-shadow: 0 px-to-rem(10px) px-to-rem(5px) 0 $color-Neutro-Negro-rgba;
 }
 
 .img-header-pred {
@@ -36,7 +37,7 @@
     position: relative;
     z-index: 1;
     text-align: center;
-    color: variables.$color-Neutro-Blanco;
+    color: $color-Neutro-Blanco;
 }
 
 .intro-botones {
