--- a/Fuente/styles/sass/pages/_index.scss
+++ b/Fuente/styles/sass/pages/_index.scss
@@ -1,5 +1,6 @@
-// Importo las Variables
-@use '../utils/variables';
+// Importo las Variables y los mixins para aplicar las media queries necesarias
+@import '../utils/variables';
+@import '../utils/mixins';
 
 // Estilos para la pagina principal de la web (index.html)
 .contenido {
@@ -31,8 +32,8 @@
     height: auto;
     object-fit: cover;
     
-    box-shadow: 0px 0px 5px 5px variables.$color-Neutro-Negro-rgba;
-    border: 2px solid variables.$color-Principal;
+    box-shadow: 0px 0px 5px 5px $color-Neutro-Negro-rgba;
+    border: 2px solid $color-Principal;
     border-radius: 1rem;    
     filter: brightness(0.85) contrast(115%) saturate(140%) sepia(45%); 
 }
@@ -41,9 +42,9 @@
     width: 75%;
     margin: auto auto 2.5rem;
     padding: 1.5rem;
-    background-color: variables.$color-Terciario;
+    background-color: $color-Terciario;
     border-radius: 1rem;
-    border: 2px solid variables.$color-Secundario;
+    border: 2px solid $color-Secundario;
 }
 
 .anuncio-texto {
@@ -51,7 +52,7 @@
     font-weight: bolder;
     font-size: 1.5rem;
     text-indent: 0;
-    color: variables.$color-Principal;
+    color: $color-Principal;
 }
 
 .redes {
@@ -73,7 +74,7 @@
 .img-deco-index-redes {
     position: relative;
     width: 100%;
-    border: 4px solid variables.$color-Principal;
+    border: 4px solid $color-Principal;
     border-radius: 1rem;
     overflow: hidden;
     transition: all 0.5s;
@@ -91,15 +92,82 @@
     }
 }
 
-.img-Instagram {
+.img-deco-index-redes i.fab {
     position: absolute;
     bottom: 1rem;
     right: 1rem;
-    width: 3rem;
-    height: 3rem;
-    padding: 0.25rem;
-    background-color: variables.$color-Secundario;
-    border: 3px solid variables.$color-Neutro-Negro;
-    border-radius: 1rem;
+    font-size: 3rem;
+    text-align: center;
+    padding: 0.5rem;
+    background-color: $color-Secundario;
+    border: 3px solid $color-Neutro-Negro;
+    border-radius: 3rem;
     z-index: 10;
+}
+
+// Aqui declaro las media-queries del index
+@include media-queries(small) {
+    // Index.html
+    .contenido {
+        display: flex;
+        flex-direction: column;
+        text-align: center;
+    }
+    .contenido h2 {
+        text-align: center;
+        margin-bottom: 0.5rem;
+    }
+    .cont-texto {
+        margin-top: 0.5rem ;
+    }
+    .cont-texto a {
+        margin-top: 2rem;
+    }
+    .anuncio-texto {
+        font-size: 1.25rem;
+    }
+    .redes-img{
+        display: flex;
+        flex-wrap: wrap;
+    }
+    .img-deco-index-redes i.fab {
+        font-size: 2rem;
+    }
+}
+
+@include media-queries(laptop) {
+    // Index.html
+    .redes-img{
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+    }
+}
+
+@include media-queries(normal) {
+    // Index.html
+    .contenido {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        text-align: left;
+    }
+    .contenido h2 {
+        text-align: left;
+        margin-bottom: 1.5rem;
+    }
+    .cont-texto{
+        margin-top: 1.5rem;
+    }
+    .cont-texto a{
+        margin-top: 2.5rem;
+    }
+    .anuncio-texto {
+        font-size: 1.5rem;
+    }
+}
+
+@include media-queries(large) {
+    // Index.html
+    .img-deco-index-redes i.fab {
+       font-size: 3rem;
+    }
 }
