--- a/Fuente/styles/sass/pages/_carta.scss
+++ b/Fuente/styles/sass/pages/_carta.scss
@@ -21,27 +21,37 @@
 .img-prod-carta {
     position: relative;
     width: 100%;
-    aspect-ratio: 16/9;
-    border: 4px solid $color-Principal;
-    border-radius: 1rem;
-    overflow: hidden;
-    transition: all 0.5s;
-    filter: brightness(0.9) contrast(110%) saturate(160%) sepia(20%);
+    // aspect-ratio: 16/9;
+    // border: 4px solid $color-Principal;
+    // border-radius: 1rem;
+    // overflow: hidden;
+    // transition: all 0.5s;
+    // filter: brightness(0.9) contrast(110%) saturate(160%) sepia(20%);
 }
 
 .img-main {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
+    // width: 100%;
+    // height: 100%;
+    // object-fit: cover;
     transition: all 0.5s;
         
     &:hover {
-        transform: scale(1.05);
         filter: brightness(1.1);
     }
 }
 
 .img-desc {
-    display: block;
-    color: black;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    background-color: $color-Neutro-Marron;
+
+    h1 {
+        font-size: 2rem;
+        color: $color-Terciario;
+    }
+
+    p {
+        color: $color-Neutro-Blanco;
+    }
 }
