--- a/Fuente/styles/sass/pages/_carta.scss
+++ b/Fuente/styles/sass/pages/_carta.scss
@@ -3,7 +3,28 @@
 
 // Estilos para la pagina carta de la web (carta.html y carta/)
 .menu-carta-principal {
-    
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+    gap: 3rem;
+    width: 75%;
+    margin: 2.5rem auto;
+}
+
+.img-prod-carta-menu {
+    position: relative;
+    width: 100%;
+    border: 4px solid $color-Principal;
+    border-radius: 1rem;
+    overflow: hidden;
+    filter: brightness(0.55) contrast(110%) saturate(160%) sepia(20%);
+    transition: all 0.5s;
+}
+
+.img-main-menu {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 
@@ -29,7 +50,6 @@
     border: 4px solid $color-Principal;
     border-radius: 1rem;
     overflow: hidden;
-    transition: all 0.5s;
     filter: brightness(0.75) contrast(110%) saturate(160%) sepia(20%);
     transition: all 0.5s;
     
