--- a/Fuente/styles/sass/pages/_index.scss
+++ b/Fuente/styles/sass/pages/_index.scss
@@ -81,8 +81,10 @@
     filter: brightness(0.8) contrast(115%) saturate(140%) sepia(45%); 
 }
 .img-main {
+    display: block;
     width: 100%;
-    height: 100%;
+    height: auto;
+    aspect-ratio: 1/1;
     object-fit: cover;
     transition: all 0.5s;
         
@@ -133,6 +135,9 @@
     .img-deco-index-redes i.fab {
         font-size: 2rem;
     }
+    .img-main {
+        aspect-ratio: 16/9;
+    }
 }
 
 @include media-queries(laptop) {
@@ -140,6 +145,9 @@
     .redes-img{
         display: grid;
         grid-template-columns: 1fr 1fr 1fr;
+    }
+    .img-main {
+        aspect-ratio: 1/1;
     }
 }
 
