--- a/Fuente/styles/sass/layout/_footer.scss
+++ b/Fuente/styles/sass/layout/_footer.scss
@@ -10,6 +10,7 @@ $footer-colors: (
     "hover": $color-Terciario,
     "shadow": $color-Neutro-Negro-rgba,
     "main": $color-Principal,
+    "hover-2": $color-Neutro-Negro,
 );
 
 footer {
@@ -64,6 +65,7 @@ footer {
 }
 
 .img-redes i.fab:hover {
+    color: map.get($footer-colors, "hover-2");
     background-color: map.get($footer-colors, "text");
     border: 0.2rem solid map.get($footer-colors, "main");
 }
