--- a/Fuente/styles/css/carta.css
+++ b/Fuente/styles/css/carta.css
@@ -240,7 +240,7 @@ footer {
   background-color: #961316;
   border: 0.2rem solid #F1E7E7;
   border-radius: 2.5rem;
-  transition: all 0.5s ease;
+  transition: all 0.25s ease;
 }
 
 .img-redes i.fab:hover {
@@ -329,9 +329,9 @@ footer {
   grid-template-columns: 1fr 1fr;
   grid-template-rows: 1fr 1fr 1fr;
   gap: 3rem;
-  width: 75%;
+  width: 85%;
   height: 75rem;
-  margin: 2.5rem auto;
+  margin: 3.5rem auto;
 }
 
 .img-prod-carta-menu {
@@ -340,30 +340,29 @@ footer {
   border: 4px solid #961316;
   border-radius: 1rem;
   overflow: hidden;
+  box-shadow: 0px 2px 8px 0px rgba(34, 34, 34, 0.5);
   transition: all 0.5s;
 }
 
-.img-main-menu {
+.img-main {
   width: 100%;
   height: 100%;
   object-fit: cover;
   filter: brightness(0.55) contrast(110%) saturate(160%) sepia(20%);
   transition: all 0.5s;
 }
-.img-main-menu:hover {
+.img-main:hover {
   filter: brightness(0.5);
 }
 
 .enlace-carta {
   position: absolute;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  font-size: 5rem;
-  transition: all 0.5s;
-}
-.enlace-carta .img-main-menu:hover {
-  filter: brightness(0.5);
+  left: 50%;
+  top: 50%;
+  text-align: center;
+  transform: translate(-50%, -50%);
+  font-size: 4rem;
+  transition: all 0.25s;
 }
 
 .menu-carta ul {
@@ -374,11 +373,17 @@ footer {
   margin: 3rem;
 }
 
+.seleccion {
+  color: #F1A2A2;
+  background-color: #362624;
+}
+
 .carta-img {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr;
   gap: 1.5rem;
-  width: 75%;
+  width: 90%;
   margin: auto auto 2.5rem;
 }
 
@@ -389,17 +394,17 @@ footer {
   border-radius: 1rem;
   overflow: hidden;
   filter: brightness(0.75) contrast(110%) saturate(160%) sepia(20%);
-  transition: all 0.5s;
+  transition: all 0.25s;
 }
 .img-prod-carta:hover {
   filter: brightness(0.9);
 }
 .img-prod-carta:hover .img-desc {
   opacity: 0;
-  transition: all 0.5s;
+  transition: all 0.25s;
 }
 
-.img-main {
+.img-main-carta {
   width: 100%;
   height: 100%;
   object-fit: cover;
@@ -407,9 +412,9 @@ footer {
 
 .img-desc {
   position: absolute;
+  height: 30%;
   bottom: 0;
-  left: 0;
-  padding: 0.5rem 1rem;
+  padding: 0 1rem;
   background-color: #362624;
   border-top: 0.15rem solid #F1A2A2;
   transition: all 0.5s;
@@ -422,9 +427,92 @@ footer {
 .img-desc p {
   text-align: center;
   color: #F1E7E7;
-  margin-top: 0.5rem;
+  margin-top: 0.25rem;
 }
 
+@media (min-width: 320px) {
+  .menu-carta-principal {
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(6, 1fr);
+    width: 90%;
+  }
+  .enlace-carta {
+    font-size: 2rem;
+  }
+  .menu-carta ul {
+    flex-direction: column;
+    align-items: center;
+  }
+  .menu-carta ul a {
+    font-size: 1.5rem;
+  }
+  .carta-img {
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(9, 1fr);
+  }
+  .img-desc {
+    height: 40%;
+  }
+  .img-desc h1 {
+    font-size: 1rem;
+  }
+  .img-desc p {
+    font-size: 1rem;
+  }
+}
+@media (min-width: 480px) {
+  .enlace-carta {
+    font-size: 3rem;
+  }
+  .img-desc {
+    height: 20%;
+  }
+}
+@media (min-width: 768px) {
+  .menu-carta-principal {
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+    width: 85%;
+  }
+  .menu-carta ul {
+    flex-direction: row;
+  }
+  .menu-carta ul a {
+    font-size: 0.75rem;
+  }
+  .carta-img {
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: repeat(5, 1fr);
+  }
+  .img-desc {
+    height: 30%;
+  }
+}
+@media (min-width: 1024px) {
+  .enlace-carta {
+    font-size: 4rem;
+  }
+}
+@media (min-width: 1200px) {
+  .carta-img {
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+  }
+}
+@media (min-width: 1600px) {
+  .menu-carta ul a {
+    font-size: 1.5rem;
+  }
+  .img-desc h1 {
+    font-size: 2rem;
+  }
+  .img-desc p {
+    font-size: 1.25rem;
+  }
+  .menu-carta ul a {
+    font-size: 1.5rem;
+  }
+}
 @media (min-width: 320px) {
   body {
     padding-top: 5rem;
@@ -497,6 +585,9 @@ footer {
     display: flex;
     flex-direction: column;
   }
+  .img-redes i.fab {
+    font-size: 1.5rem;
+  }
   .fila-inferior {
     width: 90%;
   }
@@ -533,6 +624,9 @@ footer {
   }
   .enlaces.activo {
     top: 8rem;
+  }
+  .img-redes i.fab {
+    font-size: 2rem;
   }
   .copy {
     font-size: 0.75rem;
