--- a/Fuente/styles/css/index.css
+++ b/Fuente/styles/css/index.css
@@ -240,7 +240,7 @@ footer {
   background-color: #961316;
   border: 0.2rem solid #F1E7E7;
   border-radius: 2.5rem;
-  transition: all 0.5s ease;
+  transition: all 0.25s ease;
 }
 
 .img-redes i.fab:hover {
@@ -561,6 +561,9 @@ footer {
     display: flex;
     flex-direction: column;
   }
+  .img-redes i.fab {
+    font-size: 1.5rem;
+  }
   .fila-inferior {
     width: 90%;
   }
@@ -597,6 +600,9 @@ footer {
   }
   .enlaces.activo {
     top: 8rem;
+  }
+  .img-redes i.fab {
+    font-size: 2rem;
   }
   .copy {
     font-size: 0.75rem;
