--- a/Fuente/styles/sass/utils/_media_query.scss
+++ b/Fuente/styles/sass/utils/_media_query.scss
@@ -80,6 +80,9 @@
         display: flex;
         flex-direction: column;
     }
+    .img-redes i.fab {
+        font-size: 1.5rem;
+    }
     .fila-inferior {
         width: 90%;
     }
@@ -122,6 +125,9 @@
         top: 8rem;
     }
     // Footer.scss
+    .img-redes i.fab {
+        font-size: 2rem;
+    }
     .copy {
         font-size: 0.75rem;
     }
